feat: 셀 병합 및 셀 고정 테스트 추가