@@ -3,16 +3,24 @@ package excel.poi;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+import lombok.Getter;
+import lombok.ToString;
+import org.apache.poi.openxml4j.exceptions.InvalidFormatException;
+import org.apache.poi.openxml4j.opc.OPCPackage;
+import org.apache.poi.ss.usermodel.BorderStyle;
 import org.apache.poi.ss.usermodel.Cell;
 import org.apache.poi.ss.usermodel.CellStyle;
-import org.apache.poi.ss.usermodel.CellType;
 import org.apache.poi.ss.usermodel.CreationHelper;
+import org.apache.poi.ss.usermodel.FillPatternType;
+import org.apache.poi.ss.usermodel.IndexedColors;
 import org.apache.poi.ss.usermodel.Row;
 import org.apache.poi.ss.usermodel.Sheet;
 import org.apache.poi.ss.usermodel.Workbook;
+import org.apache.poi.ss.util.CellAddress;
+import org.apache.poi.ss.util.CellRangeAddress;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -20,8 +28,15 @@ import org.junit.jupiter.api.Test;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
 import java.util.Date;
+import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * Apache POI 학습 테스트
@@ -31,7 +46,6 @@ import java.util.List;
  *
  * @author wedge
  */
-@Disabled
 public class ExcelCreateTest {
     private static final String EXCEL_FILE_NAME = "src/test/resources/test.xlsx";
 
@@ -43,7 +57,13 @@ public class ExcelCreateTest {
         workbook = new XSSFWorkbook();
     }
 
-//    @AfterEach
+    /*
+     * 결과를 실제 파일로 확인하고 싶으면 @AfterEach를 주석하고
+     * createXlsxFile(workbook);
+     * 메서드를 테스트에 추가한 후, 실행한다.
+     * resources/sample.xlsx 이라는 이름으로 엑셀파일이 추가된다.
+     */
+    @AfterEach
     public void cleanUpFile() {
         File targetFile = new File(EXCEL_FILE_NAME);
         targetFile.delete();
@@ -73,7 +93,7 @@ public class ExcelCreateTest {
     @Test
     void createSheetTest() {
         //given
-        List<Sheet> sheets = List.of(
+        List<Sheet> sheets = Arrays.asList(
             workbook.createSheet("test"),
             workbook.createSheet("test2")
         );
@@ -87,7 +107,6 @@ public class ExcelCreateTest {
         assertThat(existSheet).isNotNull();
         assertThat(workbook.getNumberOfSheets()).isEqualTo(sheets.size());
 
-        //checkFile -> do cleanUpFile() comment out and check 'src/test/resources/test.xlsx'
         createXlsxFile(workbook);
     }
 
@@ -114,7 +133,6 @@ public class ExcelCreateTest {
             Row row = sheet.createRow(0);
 
             Cell stringCell = row.createCell(STRING_COL);
-            stringCell.setCellType(CellType.STRING);
             stringCell.setCellValue(givenString);
 
             //then
@@ -122,7 +140,6 @@ public class ExcelCreateTest {
 
             assertThat(expectedString.getStringCellValue()).isEqualTo(givenString);
 
-            //checkFile -> do cleanUpFile() comment out and check 'src/test/resources/test.xlsx'
             createXlsxFile(workbook);
         }
 
@@ -137,14 +154,12 @@ public class ExcelCreateTest {
             Row row = sheet.createRow(0);
 
             Cell numericIntegerCell = row.createCell(INT_COL);
-            numericIntegerCell.setCellType(CellType.NUMERIC);
             numericIntegerCell.setCellValue(givenNumber);
 
             //then
             Cell expectedInteger = row.getCell(INT_COL);
             assertThat(expectedInteger.getNumericCellValue()).isEqualTo(givenNumber);
 
-            //checkFile -> do cleanUpFile() comment out and check 'src/test/resources/test.xlsx'
             createXlsxFile(workbook);
         }
 
@@ -159,14 +174,12 @@ public class ExcelCreateTest {
             Row row = sheet.createRow(0);
 
             Cell numericDoubleCell = row.createCell(DOUBLE_COL);
-            numericDoubleCell.setCellType(CellType.NUMERIC);
             numericDoubleCell.setCellValue(givenDouble);
 
             //then
             Cell expectedDouble = row.getCell(DOUBLE_COL);
             assertThat(expectedDouble.getNumericCellValue()).isEqualTo(givenDouble);
 
-            //checkFile -> do cleanUpFile() comment out and check 'src/test/resources/test.xlsx'
             createXlsxFile(workbook);
         }
 
@@ -181,7 +194,6 @@ public class ExcelCreateTest {
             Row row = sheet.createRow(0);
 
             Cell dateCell = row.createCell(DATE_COL);
-            dateCell.setCellType(CellType.NUMERIC);
             dateCell.setCellValue(givenDate);
 
             //날짜 포맷 설정
@@ -195,7 +207,6 @@ public class ExcelCreateTest {
             Cell expectedDate = row.getCell(DATE_COL);
             assertThat(expectedDate.getDateCellValue()).isEqualTo(givenDate);
 
-            //checkFile -> do cleanUpFile() comment out and check 'src/test/resources/test.xlsx'
             createXlsxFile(workbook);
         }
 
@@ -210,14 +221,12 @@ public class ExcelCreateTest {
             Row row = sheet.createRow(0);
 
             Cell booleanCell = row.createCell(BOOLEAN_COL);
-            booleanCell.setCellType(CellType.BOOLEAN);
             booleanCell.setCellValue(givenBoolean);
 
             //then
             Cell expectedBoolean = row.getCell(BOOLEAN_COL);
             assertThat(expectedBoolean.getBooleanCellValue()).isEqualTo(givenBoolean);
 
-            //checkFile -> do cleanUpFile() comment out and check 'src/test/resources/test.xlsx'
             createXlsxFile(workbook);
         }
 
@@ -232,7 +241,6 @@ public class ExcelCreateTest {
             Row row = sheet.createRow(0);
 
             Cell stringCell = row.createCell(STRING_COL);
-            stringCell.setCellType(CellType.STRING);
             stringCell.setCellValue(givenString);
 
             //then
@@ -240,11 +248,96 @@ public class ExcelCreateTest {
 
             assertThatThrownBy(expectedString::getNumericCellValue).isInstanceOf(IllegalStateException.class);
         }
+
+        @DisplayName("셀 병합에 성공한다.")
+        @Test
+        void mergeCellTest() {
+            //given
+            final String givenString = "This is a test of merging";
+            final int firstColumn = 0;
+            final int lastColumn = 6;
+
+            CellStyle cellStyle = workbook.createCellStyle();
+            cellStyle.setFillForegroundColor(IndexedColors.YELLOW.getIndex());
+            cellStyle.setFillPattern(FillPatternType.SOLID_FOREGROUND);
+
+            cellStyle.setBorderTop(BorderStyle.MEDIUM);
+            cellStyle.setBorderBottom(BorderStyle.MEDIUM);
+            cellStyle.setBorderLeft(BorderStyle.MEDIUM);
+            cellStyle.setBorderRight(BorderStyle.MEDIUM);
+
+            //when
+            Row row = sheet.createRow(0);
+
+            Cell cell = row.createCell(firstColumn);
+            cell.setCellValue(givenString);
+            cell.setCellStyle(cellStyle);
+
+            int regionIndex = sheet.addMergedRegion(new CellRangeAddress(
+                0,              //first row (0-based)
+                0,              //last row  (0-based)
+                firstColumn,    //first column (0-based)
+                lastColumn      //last column  (0-based)
+            ));
+
+            //then
+            Cell mergedCell = row.getCell(regionIndex);
+            CellAddress address = mergedCell.getAddress();
+            assertThat(address.getColumn()).isEqualTo(firstColumn);
+            assertThat(regionIndex).isEqualTo(firstColumn);
+        }
+
+        @DisplayName("셀에 수정이 불가능하도록 락을 건다.")
+        @Test
+        void createCellLockTest() {
+            //given
+            final String givenString = "StringData";
+            final int LOCKED_CELL = 0;
+            final int UNLOCKED_CELL = 1;
+
+            // protectSheet로 만든 후, 잠금이 필요없는 셀에 setLock(false) 셀 스타일을 추가해야한다.
+            Row row = sheet.createRow(0);
+
+            Cell lockCell = row.createCell(LOCKED_CELL);
+            lockCell.setCellValue(givenString);
+
+            Cell unlockCell = row.createCell(UNLOCKED_CELL);
+            unlockCell.setCellValue(givenString);
+
+            CellStyle unlockCellStyle = workbook.createCellStyle();
+            unlockCellStyle.setLocked(false);
+            unlockCell.setCellStyle(unlockCellStyle);
+
+            //when
+            sheet.protectSheet("this is password");
+
+            //then
+            CellStyle expectedLockCellStyle = row.getCell(LOCKED_CELL).getCellStyle();
+            CellStyle expectedUnlockCellStyle = row.getCell(UNLOCKED_CELL).getCellStyle();
+            assertThat(expectedLockCellStyle.getLocked()).isTrue();
+            assertThat(expectedUnlockCellStyle.getLocked()).isFalse();
+        }
+
+        @DisplayName("일부 열과 행을 고정한다.")
+        @Test
+        void freezePaneTest() {
+            // given
+            Sheet sheet1 = workbook.createSheet("new sheet");
+            Sheet sheet2 = workbook.createSheet("second sheet");
+            Sheet sheet3 = workbook.createSheet("third sheet");
+            Sheet sheet4 = workbook.createSheet("fourth sheet");
+            // Freeze just one row
+            sheet2.createFreezePane(0, 1);
+            // Freeze just one column
+            sheet1.createFreezePane(1, 0);
+            // Freeze the columns and rows
+            sheet3.createFreezePane(2, 2);
+            // Create a split with the lower left side being the active quadrant
+            sheet4.createSplitPane(2000, 2000, 0, 0, Sheet.PANE_LOWER_LEFT);
+
+            // @afterEach를 주석하고 결과 확인
+            createXlsxFile(workbook);
+        }
     }
 
-    void createTestExcel() {
-        ExcelTestDataLoader instance = ExcelTestDataLoader.getInstance();
-        Workbook initialize = instance.initialize();
-        createXlsxFile(initialize);
-    }
 }
